// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'offline state' > offline state 1`] = `
<div>
  <div
    class="flex flex-row pt-2"
  >
    <div
      class="w-3 h-3 rounded-full bg-(--pd-status-paused)"
    />
     
    <div
      aria-label="Context connection lost"
      class="ml-1 text-xs text-(--pd-status-paused)"
    >
      CONNECTION LOST
    </div>
    <!---->
  </div>
   
  <div>
    <button
      aria-busy="false"
      aria-disabled="false"
      aria-label="Connect to context ctx-1"
      class="relative px-[16px] py-[5px] motion-reduce:transition-none min-h-[28px] min-w-[28px] leading-[15px] select-none bg-[var(--pd-button-primary-bg)] text-[var(--pd-button-primary-text)] border border-[var(--pd-button-primary-border)] hover:bg-[var(--pd-button-primary-hover-bg)] shadow-[0px_1px_4px_0px_var(--pd-shadow-color)] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--pd-button-focus-ring)] cursor-pointer rounded-[6px] "
      type="button"
    >
      <!---->
      Connect
      
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`'unknown state' > unknown state 1`] = `
<div>
  <div
    class="flex flex-row pt-2"
  >
    <div
      class="w-3 h-3 rounded-full bg-(--pd-status-disconnected)"
    />
     
    <div
      aria-label="Context Unknown"
      class="ml-1 text-xs text-(--pd-status-disconnected)"
    >
      UNKNOWN
    </div>
    <!---->
  </div>
   
  <div>
    <button
      aria-busy="false"
      aria-disabled="false"
      aria-label="Connect to context ctx-1"
      class="relative px-[16px] py-[5px] motion-reduce:transition-none min-h-[28px] min-w-[28px] leading-[15px] select-none bg-[var(--pd-button-primary-bg)] text-[var(--pd-button-primary-text)] border border-[var(--pd-button-primary-border)] hover:bg-[var(--pd-button-primary-hover-bg)] shadow-[0px_1px_4px_0px_var(--pd-shadow-color)] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--pd-button-focus-ring)] cursor-pointer rounded-[6px] "
      type="button"
    >
      <!---->
      Connect
      
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`'unreachable state' > unreachable state 1`] = `
<div>
  <div
    class="flex flex-row pt-2"
  >
    <div
      class="w-3 h-3 rounded-full bg-(--pd-status-disconnected)"
    />
     
    <div
      aria-label="Context Unreachable"
      class="ml-1 text-xs text-(--pd-status-disconnected)"
    >
      UNREACHABLE
    </div>
    <!---->
  </div>
   
  <div>
    <button
      aria-busy="false"
      aria-disabled="false"
      aria-label="Connect to context ctx-1"
      class="relative px-[16px] py-[5px] motion-reduce:transition-none min-h-[28px] min-w-[28px] leading-[15px] select-none bg-[var(--pd-button-primary-bg)] text-[var(--pd-button-primary-text)] border border-[var(--pd-button-primary-border)] hover:bg-[var(--pd-button-primary-hover-bg)] shadow-[0px_1px_4px_0px_var(--pd-shadow-color)] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--pd-button-focus-ring)] cursor-pointer rounded-[6px] "
      type="button"
    >
      <!---->
      Connect
      
      <!---->
    </button>
    <!---->
  </div>
  <!---->
  
</div>
`;
